--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1"
+    "enzyme-adapter-react-16": "^1.15.1",
+    "node-sass": "^4.13.0",
+    "style-loader": "^1.0.0"
   }
 }
